# cpp-ocr-engine

./: .devcontainer.json  CMakeLists.txt  Dockerfile  README.md
application/: CMakeLists.txt  ocrize.cpp
bindings/: CMakeLists.txt  python.cpp  run_ocr.py
libtuatara/: CMakeLists.txt
libtuatara/include/libtuatara/: tuatara.hpp
libtuatara/src/libtuatara/: tuatara.cpp  utils.cpp  utils.hpp
